--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 					<h1>Schedule an Appointment</h1>
 					<p class="price">$50.00</p>
 					<p>Schedule a 1 on 1 appointment, can set up zoom integration and add payment (stripe and paypal) here on the calendar</p>
-
+					<p>Or contact me at <span class="number">(425) - 892 - 4390</span></p>
+					
 				</div>
 
 			</section>
